--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <title>React App</title>
+    <title>SCMP-bot</title>
   </head>
   <body>
     <div id="root"></div>
